unpackaged/main/default/objects/Llamada__c/Llamada__c.object-meta.xml
<CustomObject>
    <label>Llamada</label>
    <nameField>
        <label>Nombre de Llamada</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Llamadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>