unpackaged/main/default/objects/Llamada__c/fields/Agente__c.field-meta.xml
<CustomField>
    <fullName>Agente__c</fullName>
    <label>Agente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>