unpackaged/main/default/objects/Llamada__c/fields/Disposicion__c.field-meta.xml
<CustomField>
    <fullName>Disposicion__c</fullName>
    <label>Disposición</label>
    <length>100</length>
    <type>Text</type>
</CustomField>