unpackaged/main/default/objects/Llamada__c/fields/Dnis__c.field-meta.xml
<CustomField>
    <fullName>Dnis__c</fullName>
    <label>Dnis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>