unpackaged/main/default/objects/Llamada__c/fields/Hora_Fin__c.field-meta.xml
<CustomField>
    <fullName>Hora_Fin__c</fullName>
    <label>Hora Fin</label>
    <type>Date</type>
</CustomField>