unpackaged/main/default/objects/Llamada__c/fields/Hora_Inicializacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_Inicializacion__c</fullName>
    <label>Hora Inicialización</label>
    <type>Date</type>
</CustomField>