unpackaged/main/default/objects/Llamada__c/fields/Hora_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Hora_Inicio__c</fullName>
    <label>Hora Inicio</label>
    <type>Date</type>
</CustomField>