unpackaged/main/default/objects/Llamada__c/fields/idObjeto__c.field-meta.xml
<CustomField>
    <fullName>idObjeto__c</fullName>
    <label>idObjeto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>