unpackaged/main/default/objects/Llamada__c/fields/Tiempo_ACD__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_ACD__c</fullName>
    <label>Tiempo ACD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>