unpackaged/main/default/objects/Llamada__c/fields/Tiempo_Atencion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Atencion__c</fullName>
    <label>Tiempo Atención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>