unpackaged/main/default/objects/Llamada__c/fields/Tiempo_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Conclusion__c</fullName>
    <label>Tiempo Conclusión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>