unpackaged/main/default/objects/Llamada__c/fields/Tiempo_Disposicion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Disposicion__c</fullName>
    <label>Tiempo Disposición</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>