unpackaged/main/default/objects/Llamada__c/fields/Tiempo_Retencion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Retencion__c</fullName>
    <label>Tiempo Retención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>