unpackaged/main/default/objects/Llamada__c/fields/Tiempo_Timbrado__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Timbrado__c</fullName>
    <label>Tiempo Timbrado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>