unpackaged/main/default/objects/Llamada__c/fields/Tiempo_Vista_Previa__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Vista_Previa__c</fullName>
    <label>Tiempo Vista Previa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>